# MultiDatabaseCRUDUniversity

./: .gitignore  README.md  script.sql
c++_postgres/: CMakeLists.txt  main.cpp
java_sqlserver/: pom.xml
java_sqlserver/src/main/java/org/example/: Main.java
python_mysql/: main.py
